examples/ultra_simple/expected.txt
error: type mismatch: expected int, found str
  --> input:4:11
  |
4 | let bad = x + y
  |           ^^^^^ found `str`
